# test_rook

./: CMakeLists.txt
include/: Coordinate.h  IChessBoard.h  IChessMan.h  IChessman.h  IGameElement.h  IGameRules.h  IState.h  IStateProvider.h  ISystemResource.h  RemoveCopyMove.h  utils.h  utils_log.h
src/: ChessBoardImpl.cpp  ChessBoardImpl.h  ChessManImpl.cpp  ChessManImpl.h  ChessRookImpl.cpp  ChessRookImpl.h  Game.cpp  Game.h  GameRules.cpp  GameRules.h  GameRulesImpl.cpp  GameRulesImpl.h  Logger.cpp  Logger.h  ParticipantGame.cpp  ParticipantGame.h  TreadBase.cpp  TreadBase.h  main.cpp
src/state/: DoStepState.cpp  DoStepState.h  NextStepState.cpp  NextStepState.h  StopState.cpp  StopState.h  WaitBlockStep.cpp  WaitBlockStep.h  WaitForCellStep.cpp  WaitForCellStep.h  WaitForConfirmStep.cpp  WaitForConfirmStep.h  WaitNextStepState.cpp  WaitNextStepState.h
test/: CMakeLists.txt  testBoard.cpp  testChess.cpp  testChessRook.cpp  testGameRules.cpp
